[project]
name = "rajaongkir-python-sdk"
version = "0.1.1"
description = "this is python library for support RajaOngkir API"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["rajaongkir", "raja_ongkir", "rajaongkir python sdk"]
requires-python = ">=3.11"
authors = [
    { name = "Wihlarko Prasdegdho", email = "wihlarko26@gmail.com" },
]
dependencies = [
    "httpx>=0.27.2",
    "pydantic>=2.9.2",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[project.urls]
Repository = "https://github.com/wihlarkop/rajaongkir-py"
Issues = "https://github.com/wihlarkop/rajaongkir-py/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rajaongkir_python_sdk"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.9",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".venv",
    ".vscode",
    ".idea",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "venv",
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "W191", # indentation contains tabs
    "B019"   # ignore functools.cache and functools.lru_cache
]